Tue Jul 22 21:07:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (get_cwd_fd): returns int.

Tue Jul 22 20:42:24 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimalCmp): BigDecimal#<=> should
	  return nil if an argument can't be coerced into BigDecimal.

	* ext/bigdecimal/bigdecimal.h, ext/bigdecimal/bigdecimal.c
	  (VpIsNegDoubleZero, VpItoV): comment out unused functions.

Tue Jul 22 20:33:54 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/rdoc/test_rdoc_parser_ruby.rb (teardown): close tempfile.

Tue Jul 22 19:38:38 2008  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/test_transcode.rb: added two comments

Tue Jul 22 18:08:34 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* README.EXT, README.EXT.ja: mention about FIX2LONG and NUM2LONG.
	  see [ruby-dev:35197]

Tue Jul 22 17:53:32 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (insn_data_to_s_detail), file.c (rb_stat_inspect),
	  iseq.c (ruby_iseq_disasm_insn, ruby_iseq_disasm),
	  process.c (pst_message), re.c (match_inspect): use rb_str_catf.

	* dir.c (dir_inspect), iseq.c (iseq_inspect, insn_operand_intern): use
	  rb_sprintf.

	* error.c (rb_name_error, rb_raise, rb_loaderror, rb_fatal): use
	  rb_vsprintf.

Tue Jul 22 17:20:25 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (init_func): new function to get API's address which
	  is often used and not supported on all Windows.

	* win32/win32.c (overlapped_socket_io): shouldn't use overlapped I/O if
	  CancelIo() is not supported.

Tue Jul 22 16:47:57 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h, sprintf.c (rb_str_catf, rb_str_vcatf): new
	  functions.  [ruby-dev:35597]

	* string.c (rb_str_capacity): new function to return the capacity.

Tue Jul 22 16:08:58 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/socket.c (connect_blocking, socks_connect_blocking,
	  ruby_connect): cast.

Tue Jul 22 11:05:08 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
