@@ -1,3 +1,9 @@
+Fri Jul 25 15:05:42 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/io.h (ruby_absolute_path_p): published.
+
+	* io.c (rb_sysopen_prepare): fix for non-openat platforms.
+
 Tue Jul 22 21:07:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* dir.c (get_cwd_fd): returns int.
